# AdventOfCode

./: .gitignore  CMakeLists.txt  README.md
2018/: CMakeLists.txt  aoc2018_22.cpp
2019/: CMakeLists.txt  aoc2019_20.cpp  aoc2019_6.cpp  aoc2019_6_int.cpp
2020/: CMakeLists.txt  aoc2020_7.cpp
